# moosik

./: .firebaserc  .gitignore  .prettierrc  CNAME  LICENSE  README.md  firestore.rules  global.css  index.html  package-lock.json  package.json  postcss.config.js  rollup.config.js  service-worker-index.html  service-worker.js  stats.html  svelte.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: Build.yml
client/: client.0d3d290e.js  client.143cc951.js  client.2517a519.js  client.6d9d244d.js  client.77f5116d.js  client.7e747f49.js  client.821c0e89.js  client.88db8cdb.js  client.b01d7221.js  client.f2e61b6f.js  client.f6eee4b7.js  index.14ed6133.js  index.17849a16.js  index.1a78a510.js  index.27c8b6d8.js  index.2f2845c6.js  index.98c297b0.js  index.ba2116a2.js  playlist.0030c5e4.css  playlist.0030c5e4.js  playlist.13ad1bfa.js  playlist.21ca08a8.js  playlist.69a630de.js  playlist.d2889637.js  playlist.e8c62868.js  shared-code.f1067ec2.js
client/assets/: client-f3c4e5a3.css
client/legacy/: client.2c93c7e3.js  client.31c4eced.js  client.66b47129.js  client.6a03e2bb.js  client.758e89d5.js  client.7b16b35a.js  client.7c552dfd.js  client.ab38f10e.js  client.b19ce64e.js  client.e4816e91.js  client.e79833fb.js  index.0d29179d.js  index.3514dc66.js  index.6326f603.js  index.6c556d9f.js  index.76844712.css  index.76844712.js  index.a2ecf17b.js  index.b83797c1.js  playlist.1893dcca.js  playlist.25d71b95.js  playlist.9992682b.js  (+3 more)
playlist/: index.html
src/: client.js  cookiehandler.js  server.js  template.html
src-tauri/: Cargo.toml  tauri.conf.json
(+12 files in other folders)
