[package]
name = "moosik"
version = "0.5.0"
description = "Music Player"
authors = [ "Suyashtnt" ]
license = "none for now"
repository = "N/A"
default-run = "moosik"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "moosik"
path = "src/main.rs"
